force-app/main/default/objects/Partner_Program_Company_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Program Company Data</relationshipLabel>
    <relationshipName>Partner_Program_Company_Data</relationshipName>
    <type>Lookup</type>
</CustomField>