force-app/main/default/objects/Partner_Program_Company_Data__c/fields/Reward_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Reward_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reward Eligible</label>
    <type>Checkbox</type>
</CustomField>